<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equipo"
                android:textSize="40dp"
                android:textStyle="bold"
                android:textAlignment="center"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:src="@drawable/logo_u"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/integrantes"
            android:textStyle="bold"
            android:textSize="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i1"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i2"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i3"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i4"
            android:textSize="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i5"
            android:textSize="20dp"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/but_1"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="80dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/button_1"
        android:textSize="30dp"
        android:onClick="firstActivity"/>
    <Button
        android:id="@+id/but_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginBottom="40dp"
        android:text="@string/button_2"
        android:textSize="30dp"
        android:onClick="secondActivity"/>
    <Button
        android:id="@+id/but_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:text="@string/button_3"
        android:textSize="30dp"
        android:onClick="thirdActivity"/>

</LinearLayout>


